<resources>
    <string name="app_name">authapptutorial</string>
    <string name="chatbot">Chatbot</string>
    <string name="list">List</string>
    <string name="account">Account</string>
    <string name="your_profile">Your Profile</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset password</string>
    <string name="change_profile_details">Change Profile Details</string>
    <string name="email_not_verified">Email Not Verified!</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="library">Library</string>
    <string name="library_page">Library Page</string>
    <string name="nextmonth">nextmonth</string>
    <string name="listbutton">listbutton</string>
    <string name="go_back_to_list">Go back to list</string>
    <string name="previousmonth">previousmonth</string>
    <string name="may_2021">May 2021</string>
    <string name="WED">WED</string>
    <string name="TUE">TUE</string>
    <string name="MON">MON</string>
    <string name="THUR">THUR</string>
    <string name="FRI">FRI</string>
    <string name="SAT">SAT</string>
    <string name="SUN">SUN</string>
    <string name="textview">TextView</string>
    <string name="_20th_May_2021">20th May 2021</string>
    <string name="you_have_12_tasks_to_do_today">You have 12 tasks to do today</string>
    <string name="imageview">imageview</string>
    <string name="imageview4cal">imageview4cal</string>
    <string name="imageview4task">imageview4task</string>
    <string name="imageview4diagnostics">imageview4diagnostics</string>
    <string name="new_event">New Event</string>
    <string name="previousweek" />
    <string name="nextweek" />
    <string name="calendar">Calendar</string>
    <string name="enter_message">Enter message</string>
    <string name="button">Button</string>
    <string name="chatbot_main_page">Chatbot Main Page</string>
    <string name="send">Send</string>
    <string name="chat_with_bot">Chat with bot</string>
    <string name="yoga">yoga</string>
    <string name="task_type">Task type</string>
    <string name="edit">Edit</string>
    <string name="task_title">Task title</string>
    <string name="task_details">Task details</string>
    <string name="delete">Delete</string>
    <string name="add_a_task">Add a Task</string>
    <string name="cancel">Cancel</string>
    <string name="add_task_details">Add task details</string>
    <string name="set_due_time">Set due time</string>
    <string name="personal">Personal</string>
    <string name="jan_01_2021">Jan 01 2021</string>
    <string name="other">Other</string>
    <string name="set_task_reminder">Set task reminder</string>
    <string name="work">Work</string>
    <string name="add_task_title">Add task title</string>
    <string name="edit_task">Edit Task</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="todo">TODO</string>
    <string name="click_to_chat">Click to Chat</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="meditation" />
    <string name="nature_sounds" />
    <string name="home_desk_setup" />
    <string name="workout_no_equipment" />
    <string name="manage_time" />
    <string name="verify_email_now" >Verify email now</string>
</resources>